// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper: index render component default step 1`] = `
"<div className=\\"steps-form\\">
  <div className=\\"steps-row\\">
    <div className=\\"steps-step-1 false\\">
      <img src={{...}} alt=\\"Create STRATO Developer ID\\" />
    </div>
    <div className=\\"steps-step-2 false\\">
      <img src={{...}} alt=\\"Enter temporary password\\" />
    </div>
    <div className=\\"steps-step-3 false\\">
      <img src={{...}} alt=\\"Create password\\" />
    </div>
    <div className=\\"steps-step-4 final-step\\">
      <img src={{...}} alt=\\"Download CLI Tool\\" />
    </div>
  </div>
</div>"
`;

exports[`Stepper: index render component for step 0 1`] = `
"<div className=\\"steps-form\\">
  <div className=\\"steps-row\\">
    <div className=\\"steps-step-1 false\\">
      <img src={{...}} alt=\\"Create STRATO Developer ID\\" />
    </div>
    <div className=\\"steps-step-2 false\\">
      <img src={{...}} alt=\\"Enter temporary password\\" />
    </div>
    <div className=\\"steps-step-3 false\\">
      <img src={{...}} alt=\\"Create password\\" />
    </div>
    <div className=\\"steps-step-4 final-step\\">
      <img src={{...}} alt=\\"Download CLI Tool\\" />
    </div>
  </div>
</div>"
`;

exports[`Stepper: index render component for step 1 1`] = `
"<div className=\\"steps-form\\">
  <div className=\\"steps-row\\">
    <div className=\\"steps-step-1 completed\\">
      <img src={{...}} alt=\\"Create STRATO Developer ID\\" />
    </div>
    <div className=\\"steps-step-2 false\\">
      <img src={{...}} alt=\\"Enter temporary password\\" />
    </div>
    <div className=\\"steps-step-3 false\\">
      <img src={{...}} alt=\\"Create password\\" />
    </div>
    <div className=\\"steps-step-4 final-step\\">
      <img src={{...}} alt=\\"Download CLI Tool\\" />
    </div>
  </div>
</div>"
`;

exports[`Stepper: index render component for step 2 1`] = `
"<div className=\\"steps-form\\">
  <div className=\\"steps-row\\">
    <div className=\\"steps-step-1 completed\\">
      <img src={{...}} alt=\\"Create STRATO Developer ID\\" />
    </div>
    <div className=\\"steps-step-2 completed\\">
      <img src={{...}} alt=\\"Enter temporary password\\" />
    </div>
    <div className=\\"steps-step-3 false\\">
      <img src={{...}} alt=\\"Create password\\" />
    </div>
    <div className=\\"steps-step-4 final-step\\">
      <img src={{...}} alt=\\"Download CLI Tool\\" />
    </div>
  </div>
</div>"
`;

exports[`Stepper: index render component for step 3 1`] = `
"<div className=\\"steps-form\\">
  <div className=\\"steps-row\\">
    <div className=\\"steps-step-1 completed\\">
      <img src={{...}} alt=\\"Create STRATO Developer ID\\" />
    </div>
    <div className=\\"steps-step-2 completed\\">
      <img src={{...}} alt=\\"Enter temporary password\\" />
    </div>
    <div className=\\"steps-step-3 false\\">
      <img src={{...}} alt=\\"Create password\\" />
    </div>
    <div className=\\"steps-step-4 final-step\\">
      <img src={{...}} alt=\\"Download CLI Tool\\" />
    </div>
  </div>
</div>"
`;

exports[`Stepper: index render component for step 4 1`] = `
"<div className=\\"steps-form\\">
  <div className=\\"steps-row\\">
    <div className=\\"steps-step-1 completed\\">
      <img src={{...}} alt=\\"Create STRATO Developer ID\\" />
    </div>
    <div className=\\"steps-step-2 completed\\">
      <img src={{...}} alt=\\"Enter temporary password\\" />
    </div>
    <div className=\\"steps-step-3 completed\\">
      <img src={{...}} alt=\\"Create password\\" />
    </div>
    <div className=\\"steps-step-4 final-step\\">
      <img src={{...}} alt=\\"Download CLI Tool\\" />
    </div>
  </div>
</div>"
`;
